crates/ty_python_types/resources/mdtest/snapshots/unpacking.md_-_Unpacking_-_Too_few_values_to_un…_(cef19e6b2b58e6a3).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: unpacking.md - Unpacking - Too few values to unpack
mdtest path: crates/ty_python_types/resources/mdtest/diagnostics/unpacking.md
---

# Python source files

## mdtest_snippet.py

```
1 | [a, *b, c, d] = (1, 2)  # error: [invalid-assignment]
```

# Diagnostics

```
error[invalid-assignment]: Not enough values to unpack
 --> src/mdtest_snippet.py:1:1
  |
1 | [a, *b, c, d] = (1, 2)  # error: [invalid-assignment]
  | ^^^^^^^^^^^^^   ------ Got 2
  | |
  | Expected at least 3
  |
info: rule `invalid-assignment` is enabled by default

```
